--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,10 +2,10 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 name: CI
-env: 
-SCREENER_API_KEY: ${{ secrets.SCREENR_API_KEY }}
-SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
-SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
+env:
+  SCREENER_API_KEY: ${{ secrets.SCREENR_API_KEY }}
+  SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
+  SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
 
 on:
   push:
@@ -28,8 +28,18 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        node-version: ${{ matrix.node-version }}     
+        cache: 'npm' 
     - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    #Using npm ci generally faster than running npm install
+    - name: Build the app
+    - run: |
+        npm run build 
+    - name: Run component tests 
+      run: |
+        npm run test
+    - name: Start the app
+      run: |
+        npm start & 
+        npx wait-on --timeout 60000
+        
