--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,17 +1,15 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: CI
+# Commented out for the new yml
+name: CI2
 env:
-  SCREENER_API_KEY: ${{ secrets.SCREENR_API_KEY }}
+  SCREENER_API_KEY: ${{ secrets.SCREENER_API_KEY }}
   SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
   SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -20,26 +18,33 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: [14.x]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}     
-        cache: 'npm' 
-    - run: npm ci
-    #Using npm ci generally faster than running npm install
-    - name: Build the app
-    - run: |
-        npm run build 
-    - name: Run component tests 
+        node-version: ${{ matrix.node-version }}
+    - name: Install dependencies 📦
+      #Using npm ci is generally faster than running npm install
       run: |
+        cd my-app
+        npm ci
+    - name: Build the app 🏗
+      run: |
+        cd my-app
+        npm run build
+    - name: Run component tests 🔸
+      run: |
+        cd my-app
         npm run test
-    - name: Start the app
+    - name: Start the app 📤
       run: |
-        npm start & 
+        cd my-app
+        npm start &
         npx wait-on --timeout 60000
-        
+    - name: Run visual tests 👁
+      run: |
+        cd my-app
+        npm run test:visual
